Add option to display system operator messages
Emulating the option to view user messages I have included
another useful possibility to view operator messages.

--- a/resources/tn5250jMsgs.properties
+++ b/resources/tn5250jMsgs.properties
@@ -305,7 +305,8 @@ key.[opennew]=Open New Connection
 key.[togcon]=Toggle Connection
 key.[hotspots]=Toggle Hotspots
 key.[gui]=Toggle Gui
-key.[dspmsgs]=Display Messages
+key.[dspmsgs]=Display User Messages
+key.[dspoprmsgs]=Display Operator Messages
 key.[dspattr]=Session Attributes
 key.[cursor]=Toggle Crosshair
 key.[debug]=Toggle Debug
