ConfirmTabCloseDialog: Hardcoded literal
When you try to close the tab, an English text is always displayed.
This patch adds two new literals and modifies the code so that translations can be used.
It also includes the Spanish translation.

--- a/resources/tn5250jMsgs.properties
+++ b/resources/tn5250jMsgs.properties
@@ -148,7 +148,9 @@ sa.confirmSignoff=Confirm Signon screen before close
 sa.titleSignoff=Signoff Parameters
 sa.titleErrorReset=ErrorReset
 sa.titleTabOptions=Tab Options
-sa.confirmTabClose=Confirm tab close
+sa.confirmTabClose=Ask for confirm tab close
+sa.confirmTabCloseTitle=Close Tabs
+sa.confirmTabCloseOK=Are you sure you want to close the tab??
 sa.errorReset=Error reset key required on error?
 sa.titleSignoffRegion=Signoff Region
 sa.fromRow=from Row
