Names sessions OK

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,13 +1,23 @@
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 #Wed Dec 16 17:20:12 IST 2020
 excludes=
-javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
-run.classpath=${javac.classpath}\:${build.classes.dir}
-javac.processorpath=${javac.classpath}
+file.reference.json-20201115.jar=lib/json-20201115.jar
+javac.test.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
+javac.processorpath=\
+    ${javac.classpath}
 dist.javadoc.dir=${dist.dir}/javadoc
 test.src.dir=${file.reference.Tn5250j-tests}
 file.reference.log4j-1.2.15.jar=lib/log4j-1.2.15.jar
 file.reference.jython.jar=lib/jython.jar
-run.modulepath=${javac.modulepath}
+run.modulepath=\
+    ${javac.modulepath}
 annotation.processing.enabled=true
 build.sysclasspath=ignore
 debug.modulepath=${run.modulepath}
@@ -20,7 +30,7 @@ main.class=org.tn5250j.My5250
 file.reference.itext.jar=lib/itext.jar
 junit.selected.version=3
 source.encoding=UTF-8
-javac.source=14
+javac.source=1.8
 includes=**
 javadoc.use=true
 jar.compress=false
@@ -42,9 +52,21 @@ run.jvmargs=
 jlink.additionalmodules=
 file.reference.panelmatic-0.9.jar=lib/panelmatic-0.9.jar
 javadoc.encoding=${source.encoding}
-javac.classpath=${file.reference.activation.jar}\:${file.reference.itext.jar}\:${file.reference.jt400.jar}\:${file.reference.panelmatic-0.9.jar}\:${file.reference.jython.jar}\:${file.reference.jythonlib.jar}\:${file.reference.kunststoff.jar}\:${file.reference.log4j-1.2.15.jar}\:${file.reference.mailapi.jar}\:${file.reference.smtp.jar}
+javac.classpath=\
+    ${file.reference.activation.jar}:\
+    ${file.reference.itext.jar}:\
+    ${file.reference.jt400.jar}:\
+    ${file.reference.panelmatic-0.9.jar}:\
+    ${file.reference.jython.jar}:\
+    ${file.reference.jythonlib.jar}:\
+    ${file.reference.kunststoff.jar}:\
+    ${file.reference.log4j-1.2.15.jar}:\
+    ${file.reference.mailapi.jar}:\
+    ${file.reference.smtp.jar}:\
+    ${file.reference.json-20201115.jar}
 mkdist.disabled=false
-run.test.modulepath=${javac.test.modulepath}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 build.classes.excludes=**/*.java,**/*.form
 dist.jlink.dir=${dist.dir}/jlink
 dist.jar=${dist.dir}/Tn5250j.jar
@@ -65,17 +87,20 @@ build.generated.dir=${build.dir}/generated
 javadoc.version=false
 application.title=Tn5250j
 buildfile=nbbuild.xml
-javac.test.modulepath=${javac.modulepath}
+javac.test.modulepath=\
+    ${javac.modulepath}
 debug.test.classpath=${run.test.classpath}
 javac.external.vm=true
-javac.target=14
+javac.target=1.8
 file.reference.mailapi.jar=lib/mailapi.jar
 platform.active=default_platform
 manifest.file=manifest.mf
 javadoc.html5=false
 javac.test.processorpath=${javac.test.classpath}
 meta.inf.dir=${src.dir}/META-INF
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 dist.jlink.output=${dist.jlink.dir}/Tn5250j
 annotation.processing.run.all.processors=true
 javac.modulepath=
