--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,6 +2,7 @@ auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbpr
 #Wed Dec 16 17:20:12 IST 2020
 excludes=
 file.reference.json-20201115.jar=lib/json-20201115.jar
+file.reference.panelmatic-0.9.jar=lib/panelmatic-0.9.jar
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -30,7 +31,7 @@ main.class=org.tn5250j.My5250
 file.reference.itext.jar=lib/itext.jar
 junit.selected.version=3
 source.encoding=UTF-8
-javac.source=1.8
+javac.source=11
 includes=**
 javadoc.use=true
 jar.compress=false
@@ -50,14 +51,13 @@ javadoc.splitindex=true
 javac.processormodulepath=
 run.jvmargs=
 jlink.additionalmodules=
-file.reference.panelmatic-0.9.jar=lib/panelmatic-0.9.jar
 javadoc.encoding=${source.encoding}
 javac.classpath=\
     ${file.reference.activation.jar}:\
     ${file.reference.itext.jar}:\
     ${file.reference.jt400.jar}:\
-    ${file.reference.panelmatic-0.9.jar}:\
     ${file.reference.jython.jar}:\
+    ${file.reference.panelmatic-0.9.jar}:\
     ${file.reference.jythonlib.jar}:\
     ${file.reference.kunststoff.jar}:\
     ${file.reference.log4j-1.2.15.jar}:\
@@ -91,9 +91,9 @@ javac.test.modulepath=\
     ${javac.modulepath}
 debug.test.classpath=${run.test.classpath}
 javac.external.vm=true
-javac.target=1.8
+javac.target=11
 file.reference.mailapi.jar=lib/mailapi.jar
-platform.active=default_platform
+platform.active=JDK_11
 manifest.file=manifest.mf
 javadoc.html5=false
 javac.test.processorpath=${javac.test.classpath}
